types/coord/LocationType: Cleanup Java9+ deprecation of newInstance.